deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: infrastructure
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - keycloak.swirlit.dev
    - jenkins.swirlit.dev
    - sonarqube.swirlit.dev
    - nexus.swirlit.dev
    - argocd.swirlit.dev
    - grafana.swirlit.dev
    - kibana.swirlit.dev
    - gitlab.swirlit.dev
    - longhorn.swirlit.dev
    secretName: swirlit-dev-tls
  rules:
  - host: keycloak.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  - host: jenkins.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  - host: sonarqube.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube
            port:
              number: 9000
  - host: nexus.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus
            port:
              number: 8081
  - host: argocd.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  - host: grafana.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: kibana.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
  - host: gitlab.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
  - host: longhorn.swirlit.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: infrastructure
spec:
  type: ExternalName
  externalName: longhorn-frontend.longhorn-system.svc.cluster.local
  ports:
  - port: 80
